2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Use dec r and inc a in comparison for equality.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Use 16-bit sbc in subtraction and comparison.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve handling of pointers to long and long long.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Minor addition improvement,
	  refactoring of pair test code.

2012-06-25 Borut Razem <borut.razem AT gmail.com>

	* src/regression/Makefile:
	  applied patch #3537593 - pic16 regression patch,
	  thanks to Don Wooton

2012-06-24 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/repack_release.sh: updated

2012-06-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genLeftShiftLiteral): commented out wassert to work
	  around bug 3537338


2012-06-21 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/pic16c782.c,
	  device/non-free/lib/pic14/libdev/pic16f676.c,
	  device/non-free/lib/pic14/libdev/pic16f1782.c,
	  device/non-free/lib/pic14/libdev/pic16c770.c,
	  device/non-free/lib/pic14/libdev/pic16f716.c,
	  device/non-free/lib/pic14/libdev/pic16f1503.c,
	  device/non-free/lib/pic14/libdev/pic16f1507.c,
	  device/non-free/lib/pic14/libdev/pic16f1783.c,
	  device/non-free/lib/pic14/libdev/pic16c771.c,
	  device/non-free/lib/pic14/libdev/pic16c925.c,
	  device/non-free/lib/pic14/libdev/pic16f1508.c,
	  device/non-free/lib/pic14/libdev/pic16f1823.c,
	  device/non-free/lib/pic14/libdev/pic16c432.c,
	  device/non-free/lib/pic14/libdev/pic16c717.c,
	  device/non-free/lib/pic14/libdev/pic16c781.c,
	  device/non-free/lib/pic14/libdev/pic12f675.c,